{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 244,
  "lineage": "1be911ae-e9be-9ea7-aa14-7b5d29bb2b22",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-e783071b",
            "domain": "vpc",
            "id": "eipalloc-060678a38c5812998",
            "network_interface": "eni-0f2df425841f4cb18",
            "private_dns": "ip-10-0-0-141.ap-south-1.compute.internal",
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-13-235-38-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.38.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "eip-pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01eaa2fe0d0f8042a",
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060678a38c5812998",
            "id": "nat-0dddefa7462571c8c",
            "network_interface_id": "eni-0f2df425841f4cb18",
            "private_ip": "10.0.0.141",
            "public_ip": "13.235.38.122",
            "subnet_id": "subnet-0c144b0ca3edfde37",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "nat-gw-pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            }
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072d13b78631121c9",
            "owner_id": "880678429748",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0dddefa7462571c8c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "private-pb-micro-uat-rtb",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05be47ddc1d932f28",
            "owner_id": "880678429748",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01eaa2fe0d0f8042a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "public-pb-micro-uat-rtb",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ed9d3ba6d62496",
            "route_table_id": "rtb-072d13b78631121c9",
            "subnet_id": "subnet-0a1839f7ba0da9b49"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a525e692bb23e81",
            "route_table_id": "rtb-072d13b78631121c9",
            "subnet_id": "subnet-0d163942884d520c6"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c7aeb6bc67344c",
            "route_table_id": "rtb-072d13b78631121c9",
            "subnet_id": "subnet-0e235be902a0783eb"
          },
          "depends_on": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033586186a7f9b0b0",
            "route_table_id": "rtb-05be47ddc1d932f28",
            "subnet_id": "subnet-0c144b0ca3edfde37"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3601b0cd2db7ea2",
            "route_table_id": "rtb-05be47ddc1d932f28",
            "subnet_id": "subnet-090fa7f94d11e42b7"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f850dfafea7c4cbd",
            "route_table_id": "rtb-05be47ddc1d932f28",
            "subnet_id": "subnet-0e9e422cc00582488"
          },
          "depends_on": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:security-group/sg-0a1533642a876ac80",
            "description": "Master nodes security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to worker nodes",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0831131989c1b5e82"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a1533642a876ac80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0831131989c1b5e82"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "masters-pb-micro-uat",
            "name_prefix": null,
            "owner_id": "880678429748",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "masters-pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:security-group/sg-0831131989c1b5e82",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0831131989c1b5e82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ddbf451d6708935d"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1533642a876ac80"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nodes-pb-micro-uat",
            "name_prefix": null,
            "owner_id": "880678429748",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "nodes-pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-351381882",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1533642a876ac80",
            "self": false,
            "source_security_group_id": "sg-0831131989c1b5e82",
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-2955483366",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a1533642a876ac80",
            "self": false,
            "source_security_group_id": "sg-0831131989c1b5e82",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1657486582",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0831131989c1b5e82",
            "self": false,
            "source_security_group_id": "sg-0a1533642a876ac80",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master_nodes_sg",
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3798739914",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0831131989c1b5e82",
            "self": false,
            "source_security_group_id": "sg-0831131989c1b5e82",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker_nodes_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-0a1839f7ba0da9b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0a1839f7ba0da9b49",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "ap-south-1a-pb-micro-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-0d163942884d520c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "id": "subnet-0d163942884d520c6",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "ap-south-1b-pb-micro-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-0e235be902a0783eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0e235be902a0783eb",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "ap-south-1c-pb-micro-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-0c144b0ca3edfde37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/21",
            "id": "subnet-0c144b0ca3edfde37",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "utility-ap-south-1a-pb-micro-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-090fa7f94d11e42b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/21",
            "id": "subnet-090fa7f94d11e42b7",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "utility-ap-south-1b-pb-micro-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:subnet/subnet-0e9e422cc00582488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.16.0/21",
            "id": "subnet-0e9e422cc00582488",
            "map_public_ip_on_launch": false,
            "owner_id": "880678429748",
            "tags": {
              "KubernetesCluster": "pb-micro-uat",
              "Name": "utility-ap-south-1c-pb-micro-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/pb-micro-uat": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0deedaa42c8b8c2da"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:880678429748:vpc/vpc-0deedaa42c8b8c2da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021871ce933344b70",
            "default_route_table_id": "rtb-0b5a158f11f872f8d",
            "default_security_group_id": "sg-0cb74c269f321ef48",
            "dhcp_options_id": "dopt-2c799845",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0deedaa42c8b8c2da",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5a158f11f872f8d",
            "owner_id": "880678429748",
            "tags": {
              "Name": "pb-micro-uat",
              "kubernetes.io/cluster/pb-micro-uat": "shared"
            }
          }
        }
      ]
    }
  ]
}